--- a/src/scss/components/navigation-menu.scss
+++ b/src/scss/components/navigation-menu.scss
@@ -58,7 +58,18 @@
         }
     }
 
+    .cabinet-login {
+        margin-top: 20px;
+        margin-bottom: 20px;
 
+        .btn-cabinet {
+            padding-top: 16px;
+            padding-bottom: 16px;
+            padding-left: 0;
+            font-size: 18px;
+            line-height: 24px;
+        }
+    }
     
 
     /*  Menu Footer*/
