--- a/src/scss/account/main.scss
+++ b/src/scss/account/main.scss
@@ -1,3 +1,5 @@
+@import './cabinet/main';
+@import "./components/password-inputs";
 @import './pages/loginPage.scss';
 @import './pages/registrationPage.scss';
 
