--- a/src/scss/components/feedback.scss
+++ b/src/scss/components/feedback.scss
@@ -1,6 +1,11 @@
 /* SECTION FEEDBACK */
 
 .feedback {
+
+    .flex-container {
+        padding-left: 20px;
+    }
+
     .feedback__tabs {
         justify-content: start;
     }
