--- a/src/scss/components/slider.scss
+++ b/src/scss/components/slider.scss
@@ -39,7 +39,7 @@
         width: 32px;
         height: 32px;
         background-color: transparent;
-        transform: translate(-50%, -40%);;
+        transform: translate(-51%,-35%);
         border: 1px solid #000;
         border-radius: 50%;
     }
