--- a/src/scss/shop/main.scss
+++ b/src/scss/shop/main.scss
@@ -2,6 +2,7 @@
 @import './sections/invite.scss';
 @import './sections/catalog-controls.scss';
 @import './sections/header.scss';
+@import './sections/seo-section';
 
 @import './pages/HomePage.scss';
 @import './pages/CatalogPage.scss';
