--- a/src/scss/components/modals.scss
+++ b/src/scss/components/modals.scss
@@ -26,6 +26,12 @@
         }
     }
 
+    .modal__text {
+        font-size: 16px;
+        line-height: 150%;
+        color: #3B4857;
+    }
+
     .modal__text:not(:last-of-type) {
         margin-bottom: 12px;
     }
@@ -69,13 +75,14 @@
 }
 
 .modal--perfume {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: -1000px;
     padding: 32px 0;
     max-width: 746px;
     width: 100%;
-    height: 100%;
+    overflow-y: scroll !important;
+    height: 100vh;
     background-color: #fff;
     transition: all ease-in-out .8s;
     z-index: 10;
@@ -105,7 +112,7 @@
             padding-right: 16px;
             padding-bottom: 20px;
             padding-left: 16px;
-            height: 100%;
+            height: auto;
         }
     }
 
@@ -469,6 +476,11 @@
         font-size: 14px;
         line-height: 19px;
         color: $colorSecondary;
+    }
+    
+    .btn-fill:hover {
+        background-color: #000;
+        transition: ease-in .25s;
     }
 }
 
