--- a/src/scss/components/navigation-menu.scss
+++ b/src/scss/components/navigation-menu.scss
@@ -40,6 +40,8 @@
 
         .item-link {
             color: #000;
+            font-size: 16px;
+            line-height: 15px;
         }
 
         @media screen and(max-width: 768px) {
