--- a/src/scss/components/range-slider.scss
+++ b/src/scss/components/range-slider.scss
@@ -29,7 +29,7 @@
         border: 0;
         outline: none;
         background: linear-gradient(#8D6355,#8D6355) no-repeat center;
-        background-size: 100% 2px;
+        background-size: 100% 4px;
         -webkit-appearance: none;
            -moz-appearance: none;
                 appearance: none;
@@ -97,6 +97,23 @@
             display: block;
             height: 100%;
         }
+
+        .form-input {
+            font-size: 14px;
+            line-height: 19px;
+        }
+    }
+
+    .submitRangeValue {
+        margin-top: auto;
+        margin-left: 6px;
+        padding: 5px 16px;
+        background-color: #fff;
+        border: 1px solid #000000;
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 19px;
+        text-transform: uppercase;
     }
 
     @media screen and(max-width: 768px) {
