--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -1,6 +1,7 @@
 .section {
     padding-top: 100px;
     padding-bottom: 50px;
+    overflow: hidden;
 
     @media screen and(max-width: 768px) {
         padding-top: 50px;
@@ -123,9 +124,56 @@
     }
 }
 
+.corporate-gifts {
+    .section__bg {
+        width: 650px;
+
+        @media screen and(max-width: 1024px) {
+            width: 100%;
+            height: 220px;
+        }
+    }
+
+    @media screen and(max-width: 1024px) {
+        .icon-list--vertical {
+            margin-top: 32px;
+        }
+    }
+}
+
 .section__bg {
     padding-top: 44px;
     padding-bottom: 44px;
+
+
+    .slide {
+        width: 650px;
+        height: 600px;
+
+        img {
+            width: inherit;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        @media screen and(max-width: 1024px) {
+            width: 100%;
+            height: 220px;
+        }
+    }
+
+    .flickity-page-dots {
+        bottom: 66px;
+
+        .dot {
+            background-color: #fff;
+
+            &::before {
+                border: 1px solid #fff;
+            }
+        }
+    }
+
 
     @media screen and(max-width: 768px) {
         padding-top: 12px;
@@ -133,6 +181,10 @@
 
         img {
             width: 100%;
+        }
+
+        .flickity-page-dots {
+            bottom: 28px;
         }
     }
 }
