--- a/src/scss/pages/cartPage.scss
+++ b/src/scss/pages/cartPage.scss
@@ -1,3 +1,13 @@
+.step--cart {
+
+    .recommended__product-list {
+        .custom-select {
+            margin-bottom: 0 !important;
+        }
+    }
+
+}
+
 .cart-header {
     width: 100%;
     height: 93px;
@@ -447,10 +457,22 @@
     place-items: center;
     width: 32px;
     height: 32px;
+    cursor: pointer;
+    //pointer-events: none;
 
     svg {
         width: 20px;
         height: 20px;
+    }
+
+    &.active {
+        svg {
+            fill: $colorBrownDarken !important;
+        }
+
+        svg path {
+            stroke: #8D6355 !important;
+        }
     }
 
     @media screen and(max-width: 768px) {
@@ -470,12 +492,17 @@
 
 .card--recommended:hover,
 .card--product:hover {
-    box-shadow: 0px 2px 9px rgba(0, 0, 0, 0.16);
+    box-shadow: 0 2px 9px rgba(0, 0, 0, 0.16);
 
     .custom-select--card,
     .card__btn-buy {
         opacity: 1;
         transition: all ease-in-out .25s;
+    }
+
+    .new::before,
+    .hot::before {
+        z-index: 11;
     }
 }
 
