--- a/src/scss/shop/pages/SingleProductPage.scss
+++ b/src/scss/shop/pages/SingleProductPage.scss
@@ -64,6 +64,11 @@
         p {
             margin-bottom: 8px;
             font-size: 14px;
+            color: #3B4857;
+
+            .bold {
+                color: #000;
+            }
         }
     }
 
@@ -152,22 +157,25 @@
         background-color: transparent;
         border: none;
 
-        &::before {
-            content: '';
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            width: 24px;
-            height: 24px;
-            background-image: url("data:image/svg+xml,%3Csvg width='24' height='22' viewBox='0 0 24 22' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M21.0216 3.31694C20.5004 2.79376 19.8815 2.37873 19.2003 2.09557C18.5191 1.81241 17.7889 1.66667 17.0516 1.66667C16.3142 1.66667 15.5841 1.81241 14.9029 2.09557C14.2217 2.37873 13.6028 2.79376 13.0815 3.31694L11.9997 4.40222L10.9179 3.31694C9.86496 2.26064 8.43689 1.66722 6.94783 1.66722C5.45877 1.66722 4.03069 2.26064 2.97777 3.31694C1.92484 4.37324 1.33331 5.80589 1.33331 7.29972C1.33331 8.79355 1.92484 10.2262 2.97777 11.2825L4.05958 12.3678L11.9997 20.3333L19.9398 12.3678L21.0216 11.2825C21.5432 10.7596 21.9569 10.1387 22.2391 9.45529C22.5214 8.77191 22.6666 8.03944 22.6666 7.29972C22.6666 6.56 22.5214 5.82753 22.2391 5.14415C21.9569 4.46077 21.5432 3.83988 21.0216 3.31694V3.31694Z' stroke='black' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M21.0216 3.31694C20.5004 2.79376 19.8815 2.37873 19.2003 2.09557C18.5191 1.81241 17.7889 1.66667 17.0516 1.66667C16.3142 1.66667 15.5841 1.81241 14.9029 2.09557C14.2217 2.37873 13.6028 2.79376 13.0815 3.31694L11.9997 4.40222L10.9179 3.31694C9.86496 2.26064 8.43689 1.66722 6.94783 1.66722C5.45877 1.66722 4.03069 2.26064 2.97777 3.31694C1.92484 4.37324 1.33331 5.80589 1.33331 7.29972C1.33331 8.79355 1.92484 10.2262 2.97777 11.2825L4.05958 12.3678L11.9997 20.3333L19.9398 12.3678L21.0216 11.2825C21.5432 10.7596 21.9569 10.1387 22.2391 9.45529C22.5214 8.77191 22.6666 8.03944 22.6666 7.29972C22.6666 6.56 22.5214 5.82753 22.2391 5.14415C21.9569 4.46077 21.5432 3.83988 21.0216 3.31694V3.31694Z' stroke='url(%23paint0_linear)' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cdefs%3E%3ClinearGradient id='paint0_linear' x1='12' y1='1.66667' x2='12' y2='20.3333' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='black'/%3E%3Cstop offset='1' stop-color='black' stop-opacity='0'/%3E%3C/linearGradient%3E%3C/defs%3E%3C/svg%3E");
-            background-repeat: no-repeat;
-            transform: translate(-50%, -50%);
+        &.active {
+            svg {
+                fill: $colorBrownDarken !important;
+            }
+
+            svg path {
+                stroke: #8D6355 !important;
+            }
+        }
+
+        &.card__like {
+            top: unset;
+            right: unset;
         }
     }
 
     .btn-buy {
         padding-top: 15px;
-        padding-bottom: 15px; 
+        padding-bottom: 15px;
         width: 100%;
     }
 
@@ -465,6 +473,10 @@
 
 .section-new {
     margin-bottom: 140px;
+
+    @media screen and(max-width: 1024px) {
+        margin-bottom: 50px;
+    }
 }
 
 
