--- a/src/scss/components/index.scss
+++ b/src/scss/components/index.scss
@@ -16,6 +16,6 @@
 @import './feedback.scss';
 @import './tooltip.scss';
 @import './notifications';
-
+@import './goods-tile';
 /* Blog */
 @import './blog.scss';
