--- a/src/scss/shop/pages/CatalogPage.scss
+++ b/src/scss/shop/pages/CatalogPage.scss
@@ -37,6 +37,9 @@
 
 .breadcrumbs {
 
+    .breadcrumbs__body {
+        color: $colorGreyLighten;
+    }
     .active {
         color: $colorBrownDarken;
     }
