--- a/src/scss/shop/pages/SingleProductPage.scss
+++ b/src/scss/shop/pages/SingleProductPage.scss
@@ -75,6 +75,7 @@
 
     /* HERO PREVIEW */
     .hero__preview {
+        position: relative;
         margin-right: 25px;
         margin-left: 25px;
         padding: 80px 12px 0;
