--- a/src/scss/blog/pages/postPage.scss
+++ b/src/scss/blog/pages/postPage.scss
@@ -4,6 +4,13 @@
 
   .post__title {
     margin-bottom: 40px;
+    font-size: 32px;
+    line-height: 43px;
+
+    @media screen and(max-width: 1024px) {
+      font-size: 20px;
+      line-height: 150%;
+    }
   }
 
   .post__preview {
@@ -65,6 +72,10 @@
     margin-bottom: 50px;
     display: flex;
     justify-content: space-between;
+
+    .btn-link:first-of-type {
+      border: none;
+    }
 
     @media screen and(max-width: 768px) {
       flex-direction: column;
