--- a/src/scss/components/feedback.scss
+++ b/src/scss/components/feedback.scss
@@ -140,6 +140,17 @@
     appearance: auto;
 }
 
+.form-textarea {
+    color: #000;
+
+    &::placeholder {
+        font-family: "Open Sans", sans-serif;
+        font-size: 14px;
+        line-height: 19px;
+        color: $colorGreyLighten;
+    }
+}
+
 .comments-form {
     margin-left: 100px;
     max-width: 452px;
@@ -153,6 +164,13 @@
 
     .form-textarea {
         padding-left: 0;
+
+        &::placeholder {
+            font-family: "Open Sans", sans-serif;
+            font-size: 14px;
+            line-height: 19px;
+            color: $colorGreyLighten;
+        }
     }
 
     .form__title {
