--- a/src/scss/shop/sections/header.scss
+++ b/src/scss/shop/sections/header.scss
@@ -1,9 +1,7 @@
-// #buttonMobileSearchBar {
-
-//     &.active {
-        
-//     }
-// }
+ #buttonMobileSearchBar {
+     width: 29px;
+     height: 32px;
+ }
 
 .header__search-input {
     margin-left: auto;
