--- a/src/scss/framework/utils.scss
+++ b/src/scss/framework/utils.scss
@@ -7,7 +7,7 @@
     height: 100%;
     background-color: rgb(0, 0, 0);
     opacity: 0;
-    transition: 0.4s;
+    //transition: ease-in 0.2s;
     z-index: -4;
     visibility: hidden;
 
