--- a/src/scss/pages/404.scss
+++ b/src/scss/pages/404.scss
@@ -1,3 +1,42 @@
+.not-found-page {
+    .section-recommended {
+        margin-top: 120px;
+    }
+}
+
 .not-found-body {
     margin-top: 103px;
+
+    .btn-link {
+        display: block;
+        margin: 32px auto;
+        max-width: 343px;
+        width: 100%;
+    }
+}
+
+.not-found__bg {
+    svg {
+        display: block;
+        margin: 0 auto;
+    }
+}
+
+.not-found__title {
+    margin-top: 32px;
+    text-align: center;
+}
+
+.not-found__subtitle {
+    margin: 12px auto;
+    display: block;
+    max-width: 700px;
+    width: 100%;
+    font-size: 16px;
+    line-height: 150%;
+    color: $colorSecondary;
+
+    @media screen and(max-width: 768px) {
+        text-align: center;
+    }
 }
