--- a/src/scss/pages/infoPage.scss
+++ b/src/scss/pages/infoPage.scss
@@ -56,8 +56,12 @@
         transition: ease-in .25s;
       }
     }
+  }
 
-
+  @media screen and(max-width: 768px) {
+     .info__tabs {
+       display: none;
+     }
   }
 }
 
